--- a/ASFGameBuyPlugin/ASFGameBuyPlugin.csproj
+++ b/ASFGameBuyPlugin/ASFGameBuyPlugin.csproj
@@ -3,11 +3,22 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <Version>1.0.0.0</Version>
+    <Authors>SeRi0uS007</Authors>
+    <Company />
+    <Product>Game Buy Plugin</Product>
+    <Description>An ArchiSteamFarm plugin for automatic purchase of games and in-game items from Steam</Description>
+    <Copyright>@SeRi0uS007</Copyright>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageProjectUrl>https://t.me/SeRi0uS007</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/SeRi0uS007/ASFGameBuyPlugin</RepositoryUrl>
+    <PackageTags>steam, asf, asf-plugin</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="0.14.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="SteamKit2" Version="2.3.0" />
     <PackageReference Include="System.Composition.AttributedModel" Version="5.0.1" IncludeAssets="compile" />
   </ItemGroup>
 
@@ -15,6 +26,13 @@
     <Reference Include="ArchiSteamFarm">
       <HintPath>lib\ArchiSteamFarm.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
